--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,13 +5,13 @@ def releaseTime() {
 }
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+    namespace "com.jimsshom.androidurldispatchhelper"
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.jimsshom.androidurldispatchhelper"
         minSdkVersion 19
-        targetSdkVersion 29
+        targetSdkVersion 33
         versionCode 1
         versionName '1.0.0'
 
@@ -25,8 +25,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility = 1.6
-        targetCompatibility = 1.6
+        sourceCompatibility = JavaVersion.VERSION_11
+        targetCompatibility = JavaVersion.VERSION_11
     }
 
     applicationVariants.all { variant ->
